--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "publish": true
   },
   "dependencies": {
+    "@fontsource/eb-garamond": "^5.2.6",
     "hono": "4.8.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.7.5",
     "@eslint/js": "9.29.0",
     "@types/node": "24.0.4",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "4.6.0",
     "eslint": "9.27.0",
     "eslint-plugin-react-hooks": "5.2.0",
